--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
     "react-redux": "^7.2.6",
     "react-scripts": "5.0.0",
     "react-scroll": "^1.8.4",
+    "react-spring": "^9.3.3",
     "redux": "^4.1.2",
     "web-vitals": "^2.1.2"
   },
